added category tab

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
             </div>
         </div>
     </nav>
+    <!-- Showed Category -->
+    <div class="tab-container w-full">
+        <div id="tab-container" class="tabs tabs p-5 w-96 m-auto text-center flex justify-center">
+            <!-- <a class="tab">Tab 1</a>
+            <a class="tab">Tab 2</a>
+            <a class="tab">Tab 3</a> -->
+        </div>
+    </div>
     <!-- js file -->
     <script src="./javascript/index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
