--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
             <a class="tab">Tab 3</a> -->
         </div>
     </div>
+
+    <!-- category wise data show(card) -->
+
+    <div id="card-container" class="grid grid-cols-2 gap-4">
+        <!-- <div class="card w-96 bg-base-100 shadow-xl">
+            <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+            <div class="card-body">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="card-actions justify-end">
+                    <button class="btn btn-primary">Buy Now</button>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
     <!-- js file -->
     <script src="./javascript/index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
