adds modal and modal data

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
         </div> -->
     </div>
 
+    <!-- modal -->
+    <div id="modal-container" class="modal-container">
+
+    </div>
+
     <!-- js file -->
     <script src="./javascript/index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
