--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="cupcake" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,7 @@
 
     <!-- category wise data show(card) -->
 
-    <div id="card-container" class="grid grid-cols-2 gap-4">
+    <div id="card-container" class=" container mx-auto grid grid-cols-3 gap-4">
         <!-- <div class="card w-96 bg-base-100 shadow-xl">
             <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
             <div class="card-body">
